--- a/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
+++ b/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
@@ -17,6 +17,139 @@ This is what [Fucory](https://x.com/fucory) thought the day he started building 
 
 > We believe every TypeScript user of the EVM who installs Viem will also install Tevm alongside it in the future
 
+<div
+  style={{
+    display: "grid",
+    gridTemplateColumns: "repeat(auto-fill, minmax(280px, 1fr))",
+    gap: "1rem",
+    margin: "1.5rem 0",
+  }}
+>
+  <div
+    style={{
+      border: "1px solid var(--vocs-color_borderAccent)",
+      borderRadius: "var(--vocs-borderRadius_4)",
+      padding: "1.25rem",
+      backgroundColor: "var(--vocs-color_backgroundBlueTint)",
+    }}
+  >
+    <h3
+      style={{
+        fontSize: "var(--vocs-fontSize_18)",
+        fontWeight: "var(--vocs-fontWeight_medium)",
+        marginTop: 0,
+        marginBottom: "0.75rem",
+        color: "var(--vocs-color_textBlue)",
+      }}
+    >
+      🚀 Enhanced Performance
+    </h3>
+    <p
+      style={{
+        margin: 0,
+        fontSize: "var(--vocs-fontSize_14)",
+      }}
+    >
+      Execute transactions locally with near-zero latency for gas estimation,
+      transaction simulation, and debugging.
+    </p>
+  </div>
+
+<div
+  style={{
+    border: "1px solid var(--vocs-color_borderAccent)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.25rem",
+    backgroundColor: "var(--vocs-color_backgroundBlueTint)",
+  }}
+>
+  <h3
+    style={{
+      fontSize: "var(--vocs-fontSize_18)",
+      fontWeight: "var(--vocs-fontWeight_medium)",
+      marginTop: 0,
+      marginBottom: "0.75rem",
+      color: "var(--vocs-color_textBlue)",
+    }}
+  >
+    💻 Browser Compatibility
+  </h3>
+  <p
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_14)",
+    }}
+  >
+    Enable sophisticated dApp features like offline capabilities, optimistic UI
+    updates, and real-time simulations.
+  </p>
+</div>
+
+<div
+  style={{
+    border: "1px solid var(--vocs-color_borderAccent)",
+    borderRadius: "var(--vocs-borderRadius_4)",
+    padding: "1.25rem",
+    backgroundColor: "var(--vocs-color_backgroundBlueTint)",
+  }}
+>
+  <h3
+    style={{
+      fontSize: "var(--vocs-fontSize_18)",
+      fontWeight: "var(--vocs-fontWeight_medium)",
+      marginTop: 0,
+      marginBottom: "0.75rem",
+      color: "var(--vocs-color_textBlue)",
+    }}
+  >
+    🔍 Debug Superpowers
+  </h3>
+  <p
+    style={{
+      margin: 0,
+      fontSize: "var(--vocs-fontSize_14)",
+    }}
+  >
+    Step through EVM execution opcode by opcode to understand exactly what's
+    happening in your smart contracts.
+  </p>
+</div>
+
+  <div
+    style={{
+      border: "1px solid var(--vocs-color_borderAccent)",
+      borderRadius: "var(--vocs-borderRadius_4)",
+      padding: "1.25rem",
+      backgroundColor: "var(--vocs-color_backgroundBlueTint)",
+    }}
+  >
+    <h3
+      style={{
+        fontSize: "var(--vocs-fontSize_18)",
+        fontWeight: "var(--vocs-fontWeight_medium)",
+        marginTop: 0,
+        marginBottom: "0.75rem",
+        color: "var(--vocs-color_textBlue)",
+      }}
+    >
+      🛠️ Familiar Developer Experience
+    </h3>
+    <p
+      style={{
+        margin: 0,
+        fontSize: "var(--vocs-fontSize_14)",
+      }}
+    >
+      Works seamlessly with the libraries you already know - viem, ethers, or
+      any EIP-1193 compatible tool.
+    </p>
+  </div>
+</div>
+
+:::info[Did you know?]
+Tevm Node is part of a larger ecosystem that also includes [Tevm Bundler](https://tevm.sh/bundler), which allows for direct Solidity imports into JavaScript/TypeScript.
+:::
+
 ## Performance & Efficiency
 
 <div className="grid grid-cols-1 sm:grid-cols-2 gap-4 my-6">
